# Armpi

ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/: =4.11.0.86  ArmPi_mini.py  Camera.py  README.md  RPCServer.py  main.py  pyproject.toml  test.py  yaml_handle.py
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/ActionGroups/: 1.d6a  2.d6a  4.d6a  start.d6a
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/ArmIK/: ArmMoveIK.py  ArmMoveIK_demo.py  ArmMoveIK_triaxial.py  InverseKinematics.py
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/CameraCalibration/: Calibration.py  CalibrationConfig.py  CollectCalibrationPicture.py  GenerateCalibrationPlate.py  TestCalibration.py  calibration_param.npz
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/Functions/: ColorDetect.py  ColorPalletizing.py  ColorSorting.py  ColorTracking.py  ColorWarning.py  PositionDetection.py  Running.py  lab_adjust.py
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/HiwonderSDK/: ActionGroupControl.py  ActionGroupControlDemo.py  Board.py  BuzzerControlDemo.py  RGBControlDemo.py  RGB_Lighten.py  Servo_test.py  SetPWMServoDemo.py
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini/yaml/: PickingCoordinates.yaml
ArmPi_mini_RPi_4B_Version_Source_Code/ArmPi_mini_Software/: ActionGroupControl.py  ArmPi_mini.py  ArmPi_miniUi.py  ArmPi_miniUi.ui  resource.qrc  resource_rc.py
ArmPi_mini_RPi_4B_Version_Source_Code/hiwonder-toolbox/: hw_wifi.py
ArmPi_mini_RPi_5_Version_Source_Code/ArmPi_mini/: ArmPi_mini.py  Camera.py  MjpgServer.py  RPCServer.py  readme.txt  test.py  yaml_handle.py
(+28 files in other folders)
